bk_ida/sjengida/g1/is_attacked
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/is_attacked/src/attacks.c:660:6: error: use of undeclared identifier 'bishop_o_5'
v3 = bishop_o_5[v2]; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/is_attacked/src/attacks.c:671:6: error: use of undeclared identifier 'knight_o_4'
v8 = knight_o_4; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/is_attacked/src/attacks.c:678:9: error: use of undeclared identifier 'bishop_o_5'
while ( bishop_o_5 != v8 ); 
        ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/is_attacked/src/attacks.c:679:6: error: use of undeclared identifier 'rook_o_3'
v9 = rook_o_3; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/is_attacked/src/attacks.c:707:6: error: use of undeclared identifier 'knight_o_4'
if ( knight_o_4 == ++v9 ) 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/is_attacked/src/attacks.c:736:7: error: use of undeclared identifier 'bishop_o_5'
v18 = bishop_o_5[i]; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/is_attacked/src/attacks.c:767:7: error: use of undeclared identifier 'knight_o_4'
v23 = knight_o_4; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/is_attacked/src/attacks.c:774:16: error: use of undeclared identifier 'bishop_o_5'
while ( v23 != bishop_o_5 ); 
               ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/is_attacked/src/attacks.c:775:7: error: use of undeclared identifier 'rook_o_3'
v24 = rook_o_3; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/is_attacked/src/attacks.c:786:15: error: use of undeclared identifier 'knight_o_4'
if ( ++v24 == knight_o_4 ) 
              ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/is_attacked/src/obj/attacks.o] Error 1
